# Java-Libusb-Wrapper

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  publish.gradle  secret.gpg.enc  secret.gpg.gpg  settings.gradle
.circleci/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android-demo/: build.gradle
android-demo/src/main/java/com/jwoolston/android/libusb/: MSCCommunication.java  MainActivity.java  UsbMassStorageDevice.java
android-demo/src/main/res/values/: colors.xml  strings.xml
android/src/androidTest/java/com/jwoolston/libusb/android/: ExampleInstrumentedTest.java
android/src/main/: AndroidManifest.xml
android/src/main/java/com/jwoolston/libusb/: DevicePermissionDenied.java  UsbConfiguration.java  UsbDevice.java  UsbDeviceConnection.java  UsbEndpoint.java  UsbInterface.java  UsbManager.java
android/src/main/java/com/jwoolston/libusb/android/: DevicePermissionDenied.java  UsbDevice.java  UsbManager.java
android/src/test/java/com/jwoolston/libusb/android/: ExampleUnitTest.java
core/: build.gradle
core/src/androidTest/java/com/jwoolston/android/libusb/: DeviceAvailable.java  USBTestCase.java  UsbDeviceConnectionTest.java  UsbManagerTest.java  UsbManager_PermissionDenied_Test.java
core/src/main/java/com/jwoolston/libusb/: AsyncUSBThread.java  LibUsbContext.java  LibUsbDeviceDescriptor.java  LibusbError.java  UsbConfiguration.java  UsbConstants.java  UsbDevice.java  UsbDeviceConnection.java  UsbEndpoint.java  UsbInterface.java  UsbManager.java
core/src/main/java/com/jwoolston/libusb/async/: AsyncTransfer.java  BulkTransferCallback.java  ControlTransferCallback.java  InterruptTransferCallback.java  IsochronousAsyncTransfer.java  IsochronousTransferCallback.java
core/src/main/java/com/jwoolston/libusb/util/: Preconditions.java
core/src/main/jni/: libusb_error_enum.c  logging.c  usb_configuration.c  usb_device.c  usb_device_connection.c  usb_interface.c  usb_manager.c
gradle/wrapper/: gradle-wrapper.properties
jni/: device_list.c  isochronous_async_transfer.c  libusb_device_descriptor.c  usb_device.c  usb_device_connection.c  usb_manager.c
jvm/: CMakeLists.txt  build.gradle  gradle.properties
jvm/src/main/java/com/jwoolston/libusb/: UsbConfiguration.java  UsbDevice.java  UsbDeviceConnection.java  UsbEndpoint.java  UsbInterface.java  UsbManager.java
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/jwoolston/android/libusb/: MSCCommunication.java  MainActivity.java  SynchronousMSC.java  UsbMassStorageDevice.java
mobile/src/main/res/layout/: activity_main.xml  content_main.xml
mobile/src/main/res/values/: strings.xml
mobile/src/test/java/com/jwoolston/android/libusb/: ExampleUnitTest.java
msc_test_core/: build.gradle
msc_test_core/src/androidTest/java/com/jwoolston/android/libusb/msc_test_core/: ExampleInstrumentedTest.java
msc_test_core/src/main/: AndroidManifest.xml
msc_test_core/src/main/java/com/jwoolston/android/libusb/msc_test_core/: Hexdump.java
msc_test_core/src/main/java/com/jwoolston/android/libusb/msc_test_core/driver/: BlockDeviceDriver.java  BlockDeviceDriverFactory.java
msc_test_core/src/main/java/com/jwoolston/android/libusb/msc_test_core/driver/scsi/: AsyncScsiBlockDevice.java  ScsiBlockDevice.java
msc_test_core/src/main/java/com/jwoolston/android/libusb/msc_test_core/driver/scsi/commands/: CommandBlockWrapper.java  CommandStatusWrapper.java  ScsiInquiry.java  ScsiInquiryResponse.java  ScsiRead10.java  ScsiReadCapacity.java  ScsiReadCapacityResponse.java  ScsiRequestSense.java  ScsiTestUnitReady.java  ScsiWrite10.java
msc_test_core/src/main/java/com/jwoolston/android/libusb/msc_test_core/usb/: UsbCommunication.java
msc_test_core/src/main/res/values/: strings.xml
msc_test_core/src/test/java/com/jwoolston/android/libusb/msc_test_core/: ExampleUnitTest.java
myapplication/: build.gradle
myapplication/src/androidTest/java/com/jwoolston/myapplication/: ExampleInstrumentedTest.java
myapplication/src/main/: AndroidManifest.xml
myapplication/src/main/java/com/jwoolston/myapplication/: MainActivity.java
myapplication/src/test/java/com/jwoolston/myapplication/: ExampleUnitTest.java
things/: build.gradle
things-demo/src/main/res/values/: strings.xml
things/src/androidTest/java/com/jwoolston/android/libusb/: ExampleInstrumentedTest.java
things/src/main/: AndroidManifest.xml
